@@ -1,3 +1,9 @@
+2001-04-10  Ralf Corsepius  <corsepiu@faw.uni-ulm.de>
+
+	* m4/make.m4 (AM_MAKE_INCLUDE): Pass `-s' to make.
+	* tests/Makefile.am (TESTS): Added make.test.
+	* tests/make.test: New file.
+
 2001-04-10  Tom Tromey  <tromey@redhat.com>
 
 	* tests/defs: Changed how ACLOCAL and AUTOMAKE are set.
